# coding-interviews

./: BACKEND_PLANNING_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  ROOT_README.md  move-to-client.sh  package-lock.json  package.json
client/: package-lock.json  package.json
client/src/components/: CollaborativeEditor.jsx
client/src/pages/: Home.css  Home.jsx  InterviewSession.css  InterviewSession.jsx
client/src/services/: api.js  websocket.js
server/: IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_TESTS_COMPLETE.md  QUICKSTART_BACKEND.md  README.md  README_BACKEND.md  TESTING_GUIDE.md  WEBSOCKET_PROTOCOL.md  openapi.yaml  package.json  pyproject.toml  run.py  run_integration_tests.sh  setup_and_test.sh
server/src/: database.py  main.py  models.py  websocket.py
server/src/routers/: __init__.py  collaboration.py  execute.py  sessions.py
server/tests/: conftest.py  test_collaboration.py  test_execution.py  test_integration.py  test_main.py  test_sessions.py  test_websocket.py
src/: App.jsx
src/components/: CollaborativeEditor.jsx
src/pages/: InterviewSession.css
